#
# Install headers and libraries
#
install(FILES
  Histograms.h
  Histograms.hpp
  Results.h
  Results.hpp
  accessors.h
  accessors.hpp
  config.h
  config.hpp
  constants.h
  double.h
  double.hpp
  float.h
  float.hpp
  hash.h
  hxhim.h
  hxhim.hpp
  options.h
  options.hpp
  single_type.h
  single_type.hpp
  struct.h
  DESTINATION include/hxhim)
